# kube-chainsaw

./: .dockerignore  .gitignore  .goreleaser.yaml  404.html  CONTRIBUTING.md  Dockerfile  README.md  demo.tape  go.mod  go.sum  index.html  pyproject.toml  review-architecture.md  review-correctness.md  review-final.md  review-redteam.md  review-round2-correctness.md  review-round2-security.md  review-round3-final.md  review-security.md  sitemap.xml
.github/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/overview/: index.html
cmd/kube-chainsaw/: main.go  main_test.go
contributing/rules/: index.html
contributing/setup/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/ci-integration/: index.html
guides/exclusions/: index.html
guides/findings/: index.html
guides/suppressions/: index.html
pkg/analyzer/: analyzer.go  analyzer_test.go  rules.go
pkg/loader/: cluster.go  cluster_test.go  loader.go  loader_test.go
pkg/models/: models.go  models_test.go
pkg/reporter/: console.go  json.go  reporter.go  reporter_test.go  sarif.go
pkg/suppression/: suppression.go  suppression_test.go
reference/cli/: index.html
reference/go-api/: index.html
reference/output-formats/: index.html
reference/rules/: index.html
search/: search_index.json
site/: .gitignore  mkdocs.yml
site/docs/: index.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_integration.py  test_loader.py  test_models.py  test_reporters.py  test_security.py  test_suppressions.py
(+64 files in other folders)
