[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kube-chainsaw"
version = "0.1.0"
description = "Graph-level RBAC privilege chain analysis for Kubernetes manifests"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "Ugo Giordano"}]
keywords = ["kubernetes", "rbac", "security", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "packaging>=21.0",
]

[project.scripts]
kube-chainsaw = "kube_chainsaw.cli:main"

[project.urls]
Homepage = "https://github.com/ugiordan/kube-chainsaw"
Documentation = "https://ugiordan.github.io/kube-chainsaw"
Repository = "https://github.com/ugiordan/kube-chainsaw"
Issues = "https://github.com/ugiordan/kube-chainsaw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
